--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -4,10 +4,12 @@ date: "9/15/2016"
 output:
   html_document:
     lib_dir: library
-    self_contained: no
+    code_folding: "hide"
+    self_contained: FALSE
   pdf_document: default
 ---
 
+# Data preparation {.tabset}
 
 ## Library
 ```{r Library}
@@ -23,6 +25,7 @@ library(GPArotation)
 library(lubridate)
 library(psych)
 library(lavaan)
+library(Hmisc)
 library(dplyr)
 ```
 
